--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,10 @@ name = "bachelorprosjekt"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.11"
+dependencies = [
+    "pyjokes>=0.8.3",
+]
 
 [dependency-groups]
 dev = [
